fix(extração-dados): Ajustes e melhorias na função de extração de dados